adding distances matrix to dfs algo
